--- a/src/styles.css
+++ b/src/styles.css
@@ -28,3 +28,11 @@ hr {
 .units {
   font-size: 0.5;
 }
+
+.credit {
+  display: block;
+  margin-left: 5em;
+  margin-top: 2em;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  text-decoration: none;
+}
