--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,18 @@
 body {
   margin-top: 50px;
 }
+li {
+  list-style: none;
+  font-family: "Sniglet", cursive;
+  margin: 0;
+  padding: 0;
+}
+li:first-letter {
+  text-transform: capitalize;
+}
+.heading {
+  margin-left: 10px;
+}
 .weather-emojies {
   display: block;
   font-size: 5em;
@@ -12,27 +24,44 @@ hr {
   color: blueviolet;
   border: 1px solid;
 }
-.wind-speed {
-  margin-top: 40px;
-  font-size: larger;
-  font-family: "Sniglet", cursive;
-}
 
 .main-temp {
   font-size: 2em;
   display: block;
-  text-align: center;
-  position: relative;
+  margin-left: 10px;
 }
 
 .units {
   font-size: 0.5;
+  position: relative;
+  font-size: 16px;
+  top: -20px;
 }
 
 .credit {
   display: block;
   margin-left: 5em;
-  margin-top: 2em;
+  margin-top: 0;
+  padding: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration: none;
+  text-align: left;
+}
+
+.overall-body {
+  border: 1px solid #dadde1;
+  border-radius: 5px;
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.form-design {
+  margin-top: 30px;
+  margin-left: 10px;
+}
+
+.main-img {
+  margin-left: 20px;
+  margin-top: 0;
+  padding: 0;
 }
