--- a/src/styles.css
+++ b/src/styles.css
@@ -60,12 +60,15 @@ hr {
   padding: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration: none;
-  text-align: left;
+  text-align: center;
 }
 
 .overall-body {
+  padding: 20px;
   border: 1px solid #dadde1;
   border-radius: 5px;
+}
+.weather-app-wrapper {
   max-width: 500px;
   margin: 30px auto;
 }
