--- a/src/styles.css
+++ b/src/styles.css
@@ -88,3 +88,22 @@ hr {
   display: flex;
   flex-direction: row;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+
+.weather-forecast-date {
+  font-size: 16px;
+  opacity: 0.5;
+}
+
+.weather-forecast-temp-min {
+  opacity: 0.5;
+}
+
+.weather-forecast-temp {
+  font-size: 13px;
+}
