--- a/src/styles.css
+++ b/src/styles.css
@@ -54,13 +54,13 @@ hr {
 }
 
 .credit {
-  display: block;
-  margin-left: 5em;
+  display: inline;
+  margin-left: 0;
   margin-top: 0;
   padding: 0;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   text-decoration: none;
-  text-align: center;
+  text-align: left;
 }
 
 .overall-body {
